--- a/PokemonCyclopaedia/Base.lproj/Main.storyboard
+++ b/PokemonCyclopaedia/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eYs-aV-vQl">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eYs-aV-vQl" customClass="PokeCell" customModule="PokemonCyclopaedia" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -70,6 +70,10 @@
                                             <constraint firstItem="ZzG-UT-ZVK" firstAttribute="leading" secondItem="eYs-aV-vQl" secondAttribute="leading" id="rgF-6G-pnX"/>
                                             <constraint firstItem="ZzG-UT-ZVK" firstAttribute="top" secondItem="mfs-Ov-ztX" secondAttribute="bottom" id="sEM-hM-kuE"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="ZzG-UT-ZVK" id="VgM-7t-jbY"/>
+                                            <outlet property="thumbImg" destination="mfs-Ov-ztX" id="rv4-3b-zB9"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
